# feature-engineered-wearable-sleep-staging

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/interim/: split_assignments.csv
notebooks/: 01_data_exploration.ipynb  02_feature_exploration.ipynb  03_validation_error_analysis.ipynb  README.md
scripts/: audit_epoch_alignment.py  build_epoch_index.py  build_features.py  copy_previous_split.py  evaluate_models.py  run_ablation_experiments.py  run_locked_test_evaluation.py  run_rolling_logistic_experiment.py  run_validation_error_analysis.py  train_models.py
src/: __init__.py  config.py
src/data/: __init__.py  label_mapping.py  load_dreamt.py  make_epochs.py  splits.py
src/features/: acc_features.py  base_features.py  build_features.py  feature_manifest.py  hrv_features.py  rolling_features.py  signal_features.py
src/models/: ablations.py  calibration.py  error_analysis.py  evaluate.py  feature_selection.py  locked_test_evaluation.py  rolling_logistic_experiment.py  sequence_postprocessing.py  train_baselines.py  train_models.py  training.py  tune_models.py
src/visualization/: plots.py
tests/: test_ablations.py  test_base_features.py  test_calibration_and_sequence.py  test_error_analysis.py  test_feature_selection.py  test_feature_tables.py  test_label_mapping.py  test_make_epochs.py  test_model_config.py  test_rolling_features.py  test_rolling_logistic_experiment.py  test_splits.py  test_training_pipeline.py
