[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-engineered-wearable-sleep-staging"
version = "0.1.0"
description = "Feature-engineered traditional ML for DREAMT wearable sleep stage classification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "seaborn",
    "xgboost",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
interpretability = [
    "shap",
]
notebooks = [
    "ipykernel",
    "jupyter",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

